# generador-contrasena

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Procfile  README.md  docker-compose.yml  main.py  manage.py  nixpacks.toml  pyproject.toml  skills-lock.json
.claude/: settings.json
.github/workflows/: ci.yml  docker.yml
core/: urls.py  views.py
core/api/: serializers.py  throttling.py  urls.py  views.py
core/services/: __init__.py  password.py  strength.py
core/tests/: test_api.py  test_services.py  test_strength.py  test_views.py
docker/: Dockerfile  entrypoint.sh
settings/: asgi.py  base.py  development.py  production.py  test.py  wsgi.py
static/css/: base.css  components.css  layout.css  main.css  tokens.css
static/js/: app.js  generator.js  history.js  strength.js
templates/: base.html
templates/core/: home.html
